--- a/Style3.css
+++ b/Style3.css
@@ -1,11 +1,11 @@
 body {
   font-family: Arial, sans-serif;
   margin: 0;
-  padding: 50px;
+  padding: 20px;
   
   animation: borderAnimation 5s linear infinite;
   border: 10px solid transparent;
-  border-image: linear-gradient(45deg, rgb(11, 1, 1), rgb(64, 3, 231), rgb(0, 2, 0), blue, rgb(229, 6, 17), rgb(1, 0, 1)) 1;
+  border-image: linear-gradient(45deg, rgb(11, 1, 1), rgb(240, 7, 120), rgb(0, 2, 0), blue, rgb(195, 187, 187), rgb(1, 0, 1)) 1;
 }
 
 h1, p {
@@ -15,10 +15,10 @@ h1, p {
 @keyframes borderAnimation {
   0% {
     border-image-slice: 1;
-    border-image-source: linear-gradient(45deg, rgb(12, 1, 1), rgb(238, 66, 4), rgb(2, 248, 2), blue, rgb(2, 0, 4), rgb(250, 5, 250));
+    border-image-source: linear-gradient(45deg, rgb(12, 1, 1), rgb(11, 5, 3), rgb(139, 4, 196), rgb(246, 246, 251), rgb(2, 0, 4), rgb(250, 5, 250));
   }
   100% {
     border-image-slice: 1;
-    border-image-source: linear-gradient(45deg, violet, indigo, blue, green, yellow, red);
+    border-image-source: linear-gradient(45deg, rgb(18, 0, 18), rgb(0, 0, 0), rgb(233, 13, 167), rgb(1, 25, 1), rgb(6, 6, 0), rgb(18, 1, 1));
   }
 }
